Cambios antes del pull

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -35,6 +35,7 @@ cuadrarPoliza();
     });
     */
 
+    /*
     $('.f_asiento').editable("{{=URL('poliza', 'actualiza_asiento')}}", {
         tooltip: "Click para editar, ENTER para salvar.",
         indicator : "Actualizando...",
@@ -50,7 +51,9 @@ cuadrarPoliza();
             }
         });
     });
+    */
 
+    /*
     $('.cc_empresa_id').editable("{{=URL('poliza', 'actualiza_descripcion')}}",{
         tooltip: 'Click para editar, ENTER para salvar.',
         indicator: 'Actualizando...',
@@ -62,10 +65,39 @@ cuadrarPoliza();
     }).click(function() {
         $(this).find('select').chosen();
     });
+    */
+
+
+    $.getJSON('{{=URL("carga_cc")}}', function(json) {
+
+        var dataArray = [];
+
+        $.each(json, function (index, value) {
+            dataArray.push(value);
+        });
+
+        $('.cc_empresa_id').editable( "{{=URL('poliza', 'actualiza_descripcion')}}", {
+            tooltip: 'Click para editar, ENTER para salvar.',
+            indicator: 'Actualizando...'
+        }).click(function() {
+            $(this).find('input').autocomplete({
+                source: dataArray
+                //source: '{{=URL("carga_cc")}}'
+            });
+        });
+    });
+
 
     jQuery('.concepto_asiento').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
-        tooltip: "Click para editar, ENTER para salvar.",
-        indicator : "Actualizando...",
+        tooltip: 'Click para editar, ENTER para salvar.',
+        indicator: 'Actualizando...',
+        type: 'select',
+        cancel: "Cancelar",
+        onblur: 'ignore',
+        style: 'inherit',
+        loadurl: "{{=URL('poliza', 'carga_cc')}}",
+    }).click(function() {
+        $(this).find('select').chosen();
     });
 
     jQuery('.debe').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
