--- a/views/layout.html
+++ b/views/layout.html
@@ -62,14 +62,16 @@
   middle_columns = {0:'span12',1:'span9',2:'span6'}[
     (left_sidebar_enabled and 1 or 0)+(right_sidebar_enabled and 1 or 0)]
   }}
+
   	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <!-- uncomment here to load jquery-ui
-       <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
-       <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.js" type="text/javascript"></script>
-          <script src="//code.jquery.com/jquery-1.9.1.js"></script>
 
+  <!-- uncomment here to load jquery-ui
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.js" type="text/javascript"></script>
+  <script src="//code.jquery.com/jquery-1.9.1.js"></script>
        uncomment to load jquery-ui //-->
+
   <noscript><link href="{{=URL('static', 'css/web2py_bootstrap_nojs.css')}}" rel="stylesheet" type="text/css" /></noscript>
   {{block head}}{{end}}
 
@@ -78,7 +80,7 @@
   {{end}}
 
 <!-- se agrega para hacer editables los GRID -->
-<!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
+<!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script-->
 <script src="{{=URL('static', 'js/jeditable/jquery.jeditable.js')}}"></script>
 
 <style>
@@ -560,14 +562,14 @@ span.divider{
 		<script data-pace-options='{ "restartOnRequestAfter": true }' src="{{=URL('static/smartadmin','js/plugin/pace/pace.min.js')}}"></script>
 
 		<!-- Link to Google CDN's jQuery + jQueryUI; fall back to local -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+		<!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script-->
 		<script>
 			if (!window.jQuery) {
 				document.write('<script src="{{=URL('static/smartadmin','js/libs/jquery-2.0.2.min.js')}}"><\/script>');
 			}
 		</script>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+		<!--script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script-->
 		<script>
 			if (!window.jQuery.ui) {
 				document.write('<script src="{{=URL('static/smartadmin','js/libs/jquery-ui-1.10.3.min.js')}}"><\/script>');
