--- a/static/css/tabs.css
+++ b/static/css/tabs.css
@@ -65,7 +65,7 @@ h1{
     pointer-events: auto;
 }
 .modalbox{
-    width: 400px;
+    width: 40%;
     position: relative;
     padding: 5px 20px 13px 20px;
     background: #fff;
@@ -133,7 +133,8 @@ h1{
     border-radius:4px;
     -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
     -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+
 }
 .tree li {
     list-style-type:none;
@@ -187,4 +188,18 @@ h1{
     background:#eee;
     border:1px solid #94a0b4;
     color:#000
+}
+
+.menu-boton{
+	font-family: Arial, sans-serif;
+	padding: 6px 12px;
+}
+.menu-boton>a:link{
+	text-decoration:none;
+	display:block
+}
+
+.menu-boton:hover{
+	background:#eee;
+    color:#000;
 }
