--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -1,13 +1,7 @@
 {{extend 'layout.html'}}
 
-<!--script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script-->
-
-<!--script src="{{=URL('static', 'js/jeditable/jquery.jeditable.js')}}"></script-->
-
 <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
-
 
 <script>
 
@@ -30,6 +24,8 @@ jQuery(document).ready(function(){
 
     cuadrarPoliza();
 
+    /* Funciones para modificar los valores de los asientos */
+
     $.getJSON('{{=URL("carga_cc")}}', function(json) {
 
         var dataArray = [];
@@ -41,10 +37,6 @@ jQuery(document).ready(function(){
         $('.cc_empresa_id').editable( "{{=URL('poliza', 'actualiza_descripcion')}}", {
             tooltip: 'Click para editar, ENTER para salvar.',
             indicator: 'Actualizando...',
-            onerror: function(settings,original,xhr){
-                alert("It wasn't possible to edit. Try again");
-                console.log("XHR Status: " + xhr.status);
-            }
         }).click(function() {
             $(this).find('input').autocomplete({
                 source: dataArray
@@ -65,12 +57,37 @@ jQuery(document).ready(function(){
         }
     });
 
-    jQuery('.haber').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
+    $('.haber').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
         tooltip: "Click para editar, ENTER para salvar.",
         indicator: "Actualizando...",
         callback: function (value, settings) {
             cuadrarPoliza();
         }
+    });
+
+    /* Funciones para modificar los valores de las pólizas */
+
+    $('.concepto_general').editable("{{=URL('poliza', 'actualiza_poliza')}}",{
+        tooltip: "Click para editar, ENTER para salvar.",
+        indicator: "Actualizando...",
+    });
+
+    $.getJSON('{{=URL("carga_tipo_poliza")}}', function(json) {
+
+        var dataArray = [];
+
+        $.each(json, function (index, value) {
+            dataArray.push(value);
+        });
+
+        $('.tipo_poliza').editable("{{=URL('poliza', 'actualiza_tipo_poliza')}}",{
+            tooltip: "Click para editar, ENTER para salvar.",
+            indicator : "Actualizando...",
+        }).click(function() {
+            $(this).find('input').autocomplete({
+                source: dataArray
+            });
+        });
     });
 
 });
