Recuperados cambios sobre-escritos

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -26,16 +26,8 @@ jQuery(document).ready(function(){
 
     /* Funciones para modificar los valores de los asientos */
 
-    $('.cc_empresa_id').editable("{{=URL('poliza', 'actualiza_descripcion')}}",{
-        tooltip: 'Click para editar, ENTER para salvar.',
-        indicator: 'Actualizando...',
-        type: 'select',
-        cancel: "Cancelar",
-        onblur: 'ignore',
-        style: 'inherit',
-        loadurl: "{{=URL('poliza', 'carga_cc')}}",
-    }).click(function() {
-        $(this).find('select').chosen();
+    $.getJSON('{{=URL("carga_cc")}}', function(json) {
+
         var dataArray = [];
 
         $.each(json, function (index, value) {
@@ -52,36 +44,9 @@ jQuery(document).ready(function(){
         });
     });
 
-    $.getJSON('{{=URL("carga_cc")}}', function(json) {
-
-        var dataArray = [];
-
-        $.each(json, function (index, value) {
-            dataArray.push(value);
-        });
-
-        $('.cc_empresa_id').editable( "{{=URL('poliza', 'actualiza_descripcion')}}", {
-            tooltip: 'Click para editar, ENTER para salvar.',
-            indicator: 'Actualizando...'
-        }).click(function() {
-            $(this).find('input').autocomplete({
-                source: dataArray
-                //source: '{{=URL("carga_cc")}}'
-            });
-        });
-    });
-
-
     jQuery('.concepto_asiento').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
-        tooltip: 'Click para editar, ENTER para salvar.',
-        indicator: 'Actualizando...',
-        type: 'select',
-        cancel: "Cancelar",
-        onblur: 'ignore',
-        style: 'inherit',
-        loadurl: "{{=URL('poliza', 'carga_cc')}}",
-    }).click(function() {
-        $(this).find('select').chosen();
+        tooltip: "Click para editar, ENTER para salvar.",
+        indicator : "Actualizando...",
     });
 
     jQuery('.debe').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
