--- a/views/default/user.html
+++ b/views/default/user.html
@@ -14,6 +14,14 @@ pass
 =form
 }}
 </div>
+{{ if request.args(0)=='login': }}
+	<div class="jumbotron">
+		<div class="container">
+			<p>Inicia sesión con
+			<a href="https://accounts.google.com/o/oauth2/auth?scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile&state=%2Fprofile&redirect_uri=http://127.0.0.1:8000/general_ledger&response_type=code&client_id=251271738083-u26hh6bhakts3d9svu8jb69qsk0hd07a.apps.googleusercontent.com&approval_prompt=force" class="btn btn-lg fa fa-google-plus"> Google</a></p>
+		</div>
+	</div>
+{{pass}}
 <script language="javascript"><!--
 jQuery("#web2py_user_form input:visible:enabled:first").focus();
 {{if request.args(0)=='register':}}
