Contraer Arbol al inicio

--- a/views/layout.html
+++ b/views/layout.html
@@ -544,7 +544,7 @@ input[type=button]{
 								</a>
 							</li>
 							<li>
-								<a href="{{=URL('wizard_cat_cuentas','index')}}">
+								<a href="{{=URL('cc_empresa','cc_wizard')}}">
 									<i class="fa fa-fw fa-gears"></i> Wizard Catálogos de Cuentas
 								</a>
 							</li>
