--- a/views/cc_empresa/index.html
+++ b/views/cc_empresa/index.html
@@ -1,15 +1,24 @@
 {{extend 'layout.html'}}
 <script>
+    $( document ).ready(function() {
+        $('.tree li:has(li)').addClass('parent_li').find(' > span').attr('title', 'Colapsar esta rama');
+        var children = $('.tree li.parent_li > span').parent('li.parent_li').find(' > ul > li');
+        if (children.is(":visible")) {
+            children.hide('fast');
+           $('.tree li.parent_li > span').attr('title', 'Expandir esta rama').find(' > i').addClass('fa-plus-circle').removeClass('fa-minus-circle');
+        }
+       
+    });
     $(function () {
-        $('.tree li:has(ul)').addClass('parent_li').find(' > span').attr('title', 'Collapse this branch');
+        
         $('.tree li.parent_li > span').on('click', function (e) {
             var children = $(this).parent('li.parent_li').find(' > ul > li');
             if (children.is(":visible")) {
                 children.hide('fast');
-                $(this).attr('title', 'Expand this branch').find(' > i').addClass('fa-plus-circle').removeClass('fa-minus-circle');
+                $(this).attr('title', 'Expandir esta rama').find(' > i').addClass('fa-plus-circle').removeClass('fa-minus-circle');
             } else {
                 children.show('fast');
-                $(this).attr('title', 'Collapse this branch').find(' > i').addClass('fa-minus-circle').removeClass('fa-plus-circle');
+                $(this).attr('title', 'Colapsar esta rama').find(' > i').addClass('fa-minus-circle').removeClass('fa-plus-circle');
             }
             e.stopPropagation();
         });
