Ajustes para el inicio de sesion de google y web2py

--- a/views/layout.html
+++ b/views/layout.html
@@ -475,7 +475,7 @@ input[type=button]{
                           <span>{{=auth.user['first_name']}}</span>
                           <i class="fa fa-angle-down"></i>
                       {{else:}}
-                      <a class="gn-icon gn-icon-login" href={{=URL('default/user','login')}}>
+                      <a class="gn-icon gn-icon-login" href={{=URL('default','login')}}>
                           <img src="{{=URL('static/smartadmin','img/avatars/male.png')}}" alt="me" class="online" />
 
                           <span>Iniciar sesión</span></a>
