--- a/views/layout.html
+++ b/views/layout.html
@@ -528,27 +528,21 @@ input[type=button]{
 									<i class="fa fa-lg fa-fw fa-usd"></i>
 									Balanza
 								</a>
-								<a href="{{=URL('cc_empresa','index')}}">
-									<i class="fa fa-lg fa-fw fa-list-alt"></i>
-									Catálogo de cuentas
-								</a>
 							</li>
 						</ul>
 					</li>
 					<li>
 						<a href="#"><i class="fa fa-lg fa-fw fa-cog"></i> <span class="menu-item-parent">Configuraciones</span></a>
 						<ul>
-							<li>
-								<a href="{{=URL('default','index2')}}">
-									<i class="fa fa-fw fa-gears"></i> Wizard empresa
-								</a>
-							</li>
-							<li>
-								<a href="{{=URL('cc_empresa','cc_wizard')}}">
-									<i class="fa fa-fw fa-gears"></i> Wizard Catálogos de Cuentas
-								</a>
-							</li>
-							<li>
+                            <li>
+                                <a href="#"><i class="fa fa-fw fa-folder-open"></i>Catalogos</a>
+                                <ul>
+                                    <li>
+                                        <a href="{{=URL('cc_empresa','index')}}"><i class="fa fa-fw "></i> Cuentas Contables </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
 								<a href="#">
 									<i class="fa fa-fw fa-user"></i> Usuarios
 								</a>
@@ -556,10 +550,10 @@ input[type=button]{
 									<li>
 										<a href="{{=URL('permisos','index')}}"> Listar usuarios </a>
 									</li>
-                           <li>
+                                    <li>
 										<a href="{{=URL('permisos','grupos')}}"> Grupos </a>
 									</li>
-                           <li>
+                                    <li>
 										<a href="{{=URL('permisos','membresia')}}"> Membresía </a>
 									</li>
 									<li>
