--- a/views/layout.html
+++ b/views/layout.html
@@ -17,7 +17,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<!-- Basic Styles -->
-		<link rel="stylesheet" type="text/css" media="screen" href="{{=URL('static/smartadmin','css/bootstrap.min.css')}}">
+        <link rel="stylesheet" type="text/css" media="screen" href="{{=URL('static/smartadmin','css/bootstrap.min.css')}}">
 		<link rel="stylesheet" type="text/css" media="screen" href="{{=URL('static/smartadmin','css/font-awesome.min.css')}}">
 
 		<!-- SmartAdmin Styles : Please note (smartadmin-production.css) was created using LESS variables -->
@@ -539,6 +539,9 @@ input[type=button]{
                                 <ul>
                                     <li>
                                         <a href="{{=URL('cc_empresa','index')}}"><i class="fa fa-fw "></i> Cuentas Contables </a>
+                                    </li>
+                                    <li>
+                                        <a href="{{=URL('cc_empresa','cc_wizard')}}"><i class="fa fa-fw "></i> Wizard Cuentas Contables </a>
                                     </li>
                                 </ul>
                             </li>
