app que controla las empresas creadas por usuarios

--- a/views/layout.html
+++ b/views/layout.html
@@ -493,14 +493,14 @@ input[type=button]{
 			(the reference to the nav > ul) after page load. Or the navigation
 			will not initialize.
 			-->
+{{if session.modelo==0:}}
 			<nav>
 				<!-- NOTE: Notice the gaps after each icon usage <i></i>..
 				Please note that these links work a bit different than
 				traditional hre="" links. See documentation for details.
 				-->
-
 				<ul>
-					<li class="">
+					<li>
 						<a href="{{=URL('default','index.html')}}" title="Dashboard"><i class="fa fa-lg fa-fw fa-home"></i> <span class="menu-item-parent">Dashboard</span></a>
 					</li>
 					<li>
@@ -569,6 +569,21 @@ input[type=button]{
 					</li>
 				</ul>
 			</nav>
+{{else:}}
+            <nav>
+                <ul>
+                    <li>
+						<a href="{{=URL('default','index.html')}}" title="Dashboard"><i class="fa fa-lg fa-fw fa-home"></i> <span class="menu-item-parent">Dashboard</span></a>
+					</li>
+					<li>
+						<a href="{{=URL('default','empresa_wizard.html')}}">
+							<i class="fa fa-lg fa-fw fa-building"></i>
+							<span class="menu-item-parent">Crear Empresa</span>
+						</a>
+					</li>
+                </ul>
+            </nav>
+{{pass}}
 			<span class="minifyme"> <i class="fa fa-arrow-circle-left hit"></i> </span>
 
 		</aside>
